--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -1,6 +1,7 @@
 
 <!-- EAO PROJECT INFO -->
 <section ng-if="environment === 'EAO'">
+
 	<div class="detail-row project-desc" ng-show="project.description">
 		<label>Project Description</label>
 		<span class="value">{{ ::project.description }}</span>
@@ -74,7 +75,147 @@
 				</span>
 			</div>
 		</div>
-	</div>		
+		<div class="col-sm-6 col-md-4">
+			<div class="detail-row">
+				<label>Project Analyst</label>
+				<span class="value">{{project.projectAnalyst}}</span>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-4">
+			<div class="detail-row">
+				<label>Project Assistant</label>
+				<span class="value">{{project.projectAssistant}}}</span>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-4">
+			<div class="detail-row">
+				<label>Administrative Assistant</label>
+				<span class="value">{{project.administrativeAssistant}}</span>
+			</div>
+		</div>
+	</div>
+	
+	<hr />
+	
+	<!-- CAPITAL INVESTMENT -->
+	<div class="row">
+		<div class="col-sm-6 col-md-4">
+			<div class="detail-row">
+				<label>Capital Investment</label>
+				<span class="value">{{project.intake.investment}}</span>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-4">
+			<div class="detail-row">
+				<label>Notes</label>
+				<span class="value wrap-text">{{project.intake.investmentNotes}}</span>
+			</div>
+		</div>
+	</div><!-- / CAPITAL INVESTMENT -->
+	
+	<hr />
+	
+	<!-- ELECTORAL DISTRICTS -->
+	<div class="row">
+		<div class="col-sm-6 col-md-4">
+			<div class="detail-row">
+				<label>Provincial Electoral Districts</label>
+				<span class="value">{{project.provElectDist}}
+				</span>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-4">
+			<div class="detail-row">
+				<label>Federal Electoral Districts</label>
+				<span class="value">{{project.fedElectDist}}</span>
+			</div>
+		</div>
+	</div><!-- / ELECTORAL DISTRICTS -->
+	
+	
+	<!-- CONSTRUCTION & OPERATION JOBS -->
+	<section ng-if="project.intake.constructionjobs || project.intake.constructionjobsNotes || project.intake.constructionjobs || project.intake.constructionjobsNotes">
+		<div class="row">
+			<div class="col-sm-6 col-md-4">
+				<div class="detail-row">
+					<label>Construction Jobs</label>
+					<span class="value">{{project.intake.constructionjobs}}</span>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-8" ng-if="project.intake.constructionjobsNotes">
+				<div class="detail-row">
+					<label>Notes</label>
+					<span class="value wrap-text">{{project.intake.constructionjobsNotes}}</span>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-6 col-md-4">
+				<div class="detail-row">
+					<label>Operation Jobs</label>
+					<span class="value">{{project.intake.operationjobs}}</span>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-8" ng-if="project.intake.constructionjobsNotes">
+				<div class="detail-row">
+					<label>Notes</label>
+					<span class="value wrap-text">{{project.intake.operationjobsNotes}}</span>
+				</div>
+			</div>
+		</div>
+	</section><!-- / CONSTRUCTION & OPERATION JOBS -->	
+	
+	<!-- PROJECT TEAM MEMBERS -->
+	<div class="row hidden">
+		<div class="col-sm-6 col-md-4">
+			<div class="detail-row">
+				<label>Team Members</label>
+				<span class="value wrap-text">{{project.intake.constructionjobs}}</span>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-8">
+			<div class="detail-row">
+				<label>Notes</label>
+				<span class="value wrap-text">{{project.intake.constructionjobsNotes}}</span>
+			</div>
+		</div>
+	</div><!-- / TEAM MEMBERS -->
+	
+	<!-- PROJECT NOTES -->
+	<div class="row">
+		<div class="col-sm-6 col-md-4">
+			<div class="detail-row">
+				<label>Additional Notes</label>
+				<span class="value wrap-text">{{project.projectNotes}}</span>
+			</div>
+		</div>
+	</div>
+	
+	<!-- EA DETAILS -->
+	<section>
+		<h2>ENVIRONMENTAL ASSESSMENT INFO</h2>
+		<div class="row">
+			<div class="col-sm-12">
+				<div class="detail-row">
+					<label>Status</label>
+					<span class="value">{{project.eaActive}}</span>
+				</div>
+			</div>
+			<div class="col-sm-12" ng-if="project.eaIssues">
+				<div class="detail-row">
+					<label>Issues</label>
+					<span class="value wrap-text">{{project.eaIssues}}</span>
+				</div>
+			</div>
+			<div class="col-sm-12" ng-if="project.eaNotes">
+				<div class="detail-row">
+					<label>Notes</label>
+					<span class="value wrap-text">{{project.eaNotes}}</span>
+				</div>
+			</div>
+		</div>
+	</section><!-- / EA DETAILS -->
+	
 </section><!-- / EAO PROJECT INFO -->
 
 <div class="mem-details row" ng-if="environment === 'MEM'">
