--- a/modules/projects/client/views/project-partials/project.schedule.html
+++ b/modules/projects/client/views/project-partials/project.schedule.html
@@ -14,9 +14,9 @@
 			<div class="panel panel-default accordion">
 				<div class="panel-heading" role="tab" id="phaseOne">
 					<a class="clearfix" role="button" data-toggle="collapse" href="#phaseCollapseOne" aria-expanded="true" aria-controls="phaseCollapseOne">
+						<span class="glyphicon glyphicon-plus pull-left"></span>
+                    	<span class="glyphicon glyphicon-minus pull-left"></span>
 						<span class="pull-left">{{phase.name}}</span>
-						<span class="glyphicon glyphicon-chevron-down pull-right"></span>
-						<span class="glyphicon glyphicon-chevron-up pull-right"></span>
 					</a>
 				</div>
 				<div id="phaseCollapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="phaseCollapseOne">
@@ -112,7 +112,7 @@
 
 <!-- ADD COMMENT SESSION MODAL -->
 <div class="modal fade" id="addCommentSessionModal" role="dialog" tabindex="-1">
-	<div class="modal-dialog add-comment-dialog">
+	<div class="modal-dialog modal-lg add-comment-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="btn btn-default close" data-dismiss="modal" aria-label="Close">
@@ -122,7 +122,7 @@
 			</div>
 			<div class="modal-body">
 				<div class="form-group">
-					<label>Comment Session Role</label>
+					<label class="control-label">Comment Session Role</label>
 					<div class="dropdown">
 						<button class="btn btn-default dropdown-toggle" id="commentSessionMenu" data-toggle="dropdown" aria-expanded="false">
 							Select Comment Session Role &nbsp;&nbsp;<span class="caret"></span>
@@ -138,11 +138,21 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<label>Comment Session Name</label>
+					<label class="control-label">Select Content</label>
+					<select class="form-control">
+						<option selected="selected">---</option>
+					</select>
+				</div>
+				<div class="form-group">
+					<label class="control-label">Name</label>
 					<input type="text" class="form-control"/>
 				</div>
+				<div class="form-group">
+					<label class="control-label">Description<em>* Viewable by Public when Comment Period is active</em></label>
+					<textarea class="form-control" rows="6"></textarea>
+				</div>
 				<div class="form-group has-error" ng-class="{'has-error': validateForm}">
-					<label>Start / End Dates</label>
+					<label class="control-label">Start / End Dates</label>
 					<div class="date-range-control clearfix">
 						<div class="date-range input-group pull-left">
 							<span class="input-group-btn">
