--- a/modules/publicComments/client/views/comments-EAO.html
+++ b/modules/publicComments/client/views/comments-EAO.html
@@ -8,19 +8,17 @@
         
         <div class="public-comment-alert">
             <h2>Public Comment Period is Now Open!</h2>
-            <div class="details">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <ul class="public-comment-period-document-links">
-                    <li><a class="document-name" href="#">Application Information Requirements</a><a href="#">[ VIEW FILES ]</a></li>
-                    <li><a class="document-name" href="#">Associated Documentation</a><a href="#">[ VIEW FILES ]</a></li>
-                </ul>
-                <button class="btn btn-success" data-toggle="modal" data-target="#submitCommentModal">
-                    Click Here to Submit a Comment
-                </button>
-            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <ul class="public-comment-period-document-links">
+                <li><a class="document-name" href="#">Application Information Requirements</a><a href="#">[ VIEW FILES ]</a></li>
+                <li><a class="document-name" href="#">Associated Documentation</a><a href="#">[ VIEW FILES ]</a></li>
+            </ul>
+            <button class="btn btn-success" data-toggle="modal" data-target="#submitCommentModal">
+                Click Here to Submit a Comment
+            </button>
         </div>
         
-        <!-- PROTOTYPE EAO STAFF ROW TEMPLATES  -->
+        <!-- PROTOTYPE EAO ROW TEMPLATES  -->
         <div>
             <ul class="tab-container nav nav-tabs" role="tablist">
                 <li role="presentation" class="active"><a href="#pendingReview" aria-controls="pendingReview" role="tab" data-toggle="tab">Pending Review (X)</a></li>
@@ -30,7 +28,7 @@
             </ul>
             <div class="tab-content">
                 <div class="tab-pane active" role="tabpanel" id="pendingReview">
-                    <div class="panel panel-default">
+                    <div class="public-comment-panel panel panel-default">
                         <table ng-table="tableParams" show-filter="true" class="eao-comment-table table table-striped table-hover">			
                             <tr class="comment-row" data-toggle="modal" data-target="#commentDetailModal">
                                 <td class="comment-col" header-class="'comment-col no-mobile'" data-title="'Posted by'" filter="{'name':'text'}" sortable="'name'">
@@ -42,7 +40,7 @@
                                 <td class="location-col no-mobile" header-class="'location-col no-mobile'" data-title="'Location'" filter="{'name':'text'}" sortable="'commentLocation'">Location</td>
                                 <td class="pillar-col" header-class="'pillar-col no-mobile'" data-title="'Pillar'" filter="{'pillar':'select'}" sortable="'commentPillar'">Health, Environment, Heritage</td>
                                 <td class="vc-col" header-class="'pillar-col'" data-title="'Valued Component'" filter="{'commentVC':'select'}" sortable="'commentVC'">Air Quality, Water Quality, Regulatory Process, Rights & Titles</td>			
-                                <td class="attachment-col" header-class="'attachment-col'"><span class="glyphicon glyphicon-paperclip"></span></td>
+                                <td class="attachment-col" header-class="'attachment-col no-mobile'"><span class="glyphicon glyphicon-paperclip"></span></td>
                                 <td class="date-col" header-class="'date-col'" data-title="'Date Posted'" filter="{'date':'text'}" sortable="'dateAdded'" >MM/DD/YYYY</td>
                                 <td class="status-col" header-class="'status-col no-mobile'" data-title="'Status'" filter="{'date':'select'}" sortable="'status'" ><span class="label label-info">EXPIRES IN 7 DAYS</span></td>
                             </tr>
@@ -56,7 +54,7 @@
                                 <td class="location-col no-mobile" header-class="'location-col no-mobile'" data-title="'Location'" filter="{'name':'text'}" sortable="'commentLocation'">Location</td>
                                 <td class="pillar-col" header-class="'pillar-col no-mobile'" data-title="'Pillar'" filter="{'pillar':'select'}" sortable="'commentPillar'">Health, Environment, Heritage</td>
                                 <td class="vc-col" header-class="'pillar-col'" data-title="'Valued Component'" filter="{'commentVC':'select'}" sortable="'commentVC'">Air Quality, Water Quality, Regulatory Process, Rights & Titles</td>			
-                                <td class="attachment-col" header-class="'attachment-col'"><span class="glyphicon glyphicon-paperclip"></span></td>
+                                <td class="attachment-col" header-class="'attachment-col no-mobile'"><span class="glyphicon glyphicon-paperclip"></span></td>
                                 <td class="date-col" header-class="'date-col'" data-title="'Date Posted'" filter="{'date':'text'}" sortable="'dateAdded'" >MM/DD/YYYY</td>
                                 <td class="status-col" header-class="'status-col no-mobile'" data-title="'Status'" filter="{'date':'select'}" sortable="'status'" ><span class="label label-warning">EXPIRES IN 7 DAYS</span></td>
                             </tr>
@@ -70,7 +68,7 @@
                                 <td class="location-col no-mobile" header-class="'location-col no-mobile'" data-title="'Location'" filter="{'name':'text'}" sortable="'commentLocation'">Location</td>
                                 <td class="pillar-col" header-class="'pillar-col no-mobile'" data-title="'Pillar'" filter="{'pillar':'select'}" sortable="'commentPillar'">Health, Environment, Heritage</td>
                                 <td class="vc-col" header-class="'pillar-col'" data-title="'Valued Component'" filter="{'commentVC':'select'}" sortable="'commentVC'">Air Quality, Water Quality, Regulatory Process, Rights & Titles</td>			
-                                <td class="attachment-col" header-class="'attachment-col'"></td>
+                                <td class="attachment-col" header-class="'attachment-col no-mobile'"></td>
                                 <td class="date-col" header-class="'date-col'" data-title="'Date Posted'" filter="{'date':'text'}" sortable="'dateAdded'" >MM/DD/YYYY</td>
                                 <td class="status-col" header-class="'status-col no-mobile'" data-title="'Status'" filter="{'date':'select'}" sortable="'status'"><span class="label label-danger">EXPIRES IN 1 DAY</span></td>
                             </tr> 
@@ -82,13 +80,13 @@
                 </div>
             </div>
         </div>
-        <!-- / PROTOTYPE EAO STAFF ROW TEMPLATES  -->
+        <!-- / EAO ROW TEMPLATES  -->
         
     </div>
 </div>
 
 <!-- COMMENT DETAIL MODAL  -->
-<div class="public-comment-detail-modal modal fade" id="commentDetailModal" role="dialog" tabindex="-1">
+<div class="public-comment-modal modal fade" id="commentDetailModal" role="dialog" tabindex="-1">
 	<div class="modal-dialog modal-lg">
 		<div class="modal-content">
 			<div class="modal-header">
@@ -109,13 +107,13 @@
                     </div>
                 </div>
                 
-                <section>
+                <section class="comment-info">
                     <label>Posted March 21, 2016</label>
                     <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
                 </section>
                 
                 <!-- PILLARS & VC'S -->
-                <section class="pillers-vc hidden">  
+                <section class="pillers-vc">  
                     <!-- DISPLAY VALUES -->
                     <div class="pillers-vc-display hidden">
                         <div class="detail-row">
@@ -166,25 +164,6 @@
                 
                 <!-- ATTACHMENTS -->
                 <section>
-                    <!-- PUBLIC/PROPONENT -->
-                    <div class="detail-row hidden">
-                        <label>Attachments</label>
-                        <div class="attachments list-group">
-                            <a class="list-group-item">
-                                <div class="file-name">file-name-1.jpg</div>
-                                <button class="file-action btn btn-link">
-                                    <span class="glyphicon glyphicon-download-alt"></span>
-                                </button> 
-                            </a>
-                            <a class="list-group-item">
-                                <div class="file-name">file-name-1.jpg</div>
-                                <button class="file-action btn btn-link">
-                                    <span class="glyphicon glyphicon-download-alt"></span>
-                                </button>  
-                            </a>
-                        </div>
-                    </div><!-- PUBLIC/PROPONENT -->
-                    <!-- EAO ONLY -->
                     <div class="detail-row">
                         <label>Attachments</label>
                         <ul class="attachments list-group">
@@ -231,7 +210,7 @@
                                 </button>
                             </li>
                         </ul>
-                    </div><!-- EAO ONLY -->   
+                    </div> 
                 </section><!-- / ATTACHMENTS -->
                 
             </div>
@@ -255,8 +234,25 @@
 				<h3 class="modal-title">Submit a Comment</h3>
 			</div>
             
-            <!-- COMMENT FORM -->
-            <form class="comment-form hidden">
+            <!-- COMMENT FORM - STEP 1 -->
+            <form class="comment-form-1 hidden">
+                <div class="modal-body">
+                    <h4>Submitting Your Comments:  How it Works</h4>
+                    <p>Comments submitted to the Environmental Assessment Office (EAO) will be published online.</p>
+                    <p>EAO publishes all accepted comments within seven days of receipt. Comments are not accepted if - in EAO’s view - they are profane, abusive or do not relate to the matter being consulted upon as stated in our <a href="http://www.eao.gov.bc.ca/pdf/EAO_Policy_Public_Comment.pdf" target="_blank">Public Comment Policy [PDF]</a>.</p>
+                    <p>EAO forwards all posted comments to project proponents so that they can be duly considered during the project's Environmental Assessment (EA) process.</p>
+                    <p>You may provide your name and city/town when making a comment, but in order to have your name displayed with your comment you must select the 'Show my name and location on the public site' option.</p>
+                    <p>All hyperlinks in comments will be converted to plain text. All attachments must be in PDF format and limited to 5MB.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-success" data-dismiss="modal">Continue</button>
+                </div>
+            </form>
+            <!-- / COMMENT FORM - STEP 1 -->
+            
+            <!-- COMMENT FORM - STEP 2 -->
+            <form class="comment-form">
                 <div class="modal-body">  
                     <fieldset>
                         <div class="row">
@@ -283,7 +279,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="form-group col-sm-12">
+                            <div class="upload-attachments form-group col-sm-12">
                                 <label class="control-label">Attachments</label>
                                 <ul class="attachments list-group">
                                     <li class="list-group-item clearfix">
@@ -323,6 +319,7 @@
                                 <div class="attachments-upload-target">
                                     <input type="file" multiple accept=".jpg,.jpeg,.pdf" />
                                     <div><strong>Drag & Drop</strong> or <strong>Click Here</strong> to Upload Attachments</div>
+                                    <small><em>All attachments must be in PDF format and limited to 5MB.</em></small>
                                 </div>
                             </div>
                         </div>
@@ -332,22 +329,21 @@
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     <button type="button" class="btn btn-success" data-dismiss="modal">Submit Comment</button>
                 </div>
-            </form><!-- / COMMENT FORM -->
+            </form><!-- / COMMENT FORM - STEP 2 -->
             
-            <!-- COMMENT STATUS -->
+            <!-- COMMENT FORM - STEP 3 -->
             <div class="comment-submit-success hidden">
                 <div class="modal-body">
-                    <div class="alert alert-success">
-                        Your Comment was Received! Thank you for participating in the <strong>{{project.name}}</strong> Public Comment Period
-                    </div>
-                    <p>Public comments received by EAO are published according to the date received. Where relevant, comments may be categorized by one or more topic areas from the Application, either during or following the public comment period. Categorized comments will appear by topic area below.</p>
+                    <h4>Thank you for your comment!</h4>
+                    <p>What happens next?</p>
+                    <p>EAO publishes all comments received within seven days of receipt, except comments that EAO deems to be inappropriate for publication. Comments may be considered inappropriate for publication if - in EAO’s view - they are profane, abusive or do not relate to the matter being consulted upon as stated in our <a href="http://www.eao.gov.bc.ca/pdf/EAO_Policy_Public_Comment.pdf" target="_blank">Public Comment Policy [PDF]</a>.</p>
                 </div><!-- / COMMENT RECEIVED -->
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
                 </div>
             </div>
             
-            <div class="comment-submit-error">
+            <div class="comment-submit-error hidden">
                 <div class="modal-body">
                     <div class="alert alert-danger">
                         Oops. Something went wrong here...
@@ -357,7 +353,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
                 </div>
-            </div>
+            </div><!-- / COMMENT FORM - STEP 3 -->
             
 		</div>
 	</div>
