--- a/modules/artifacts/client/views/artifact-view.html
+++ b/modules/artifacts/client/views/artifact-view.html
@@ -16,7 +16,9 @@
 		<div class="form-footer clearfix">
 			<div class="pull-right">
 				<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
-				<a class="btn btn-default" ui-sref="p.artifact.edit({artifactId:artifact._id})">Edit</a>
+				<a ng-if="mc.renderWidget(artifact.typeCode, project)"
+				   class="btn btn-default"
+				   ui-sref="p.artifact.edit({artifactId:artifact._id})">Edit</a>
 			</div>
 		</div>
 	</div>
