--- a/modules/publicComments/client/views/comments-EAO.html
+++ b/modules/publicComments/client/views/comments-EAO.html
@@ -8,6 +8,7 @@
         
         <div class="public-comment-alert">
             <h2>Public Comment Period is Now Open!</h2>
+            <h3><strong>June 1</strong> - <strong>July 15, 2016</strong></h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <ul class="public-comment-period-document-links">
                 <li><a class="document-name" href="#">Application Information Requirements</a><a href="#">[ VIEW FILES ]</a></li>
@@ -16,6 +17,13 @@
             <button class="btn btn-success" data-toggle="modal" data-target="#submitCommentModal">
                 Click Here to Submit a Comment
             </button>
+            <div class="open-house-dates">
+                <h4>Open House Dates</h4>
+                <ul>
+                    <li>June 15th, 2016 at Some Location</li>
+                    <li>July 10th, 2016 at Some Location</li>
+                </ul>
+            </div>
         </div>
         
         <!-- PROTOTYPE EAO ROW TEMPLATES  -->
