ESM-313 - Fixing hidden map issue

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -3071,6 +3071,10 @@ section.project-info {
 	.panel {
 		margin-bottom: 0;
 	}
+	
+	.angular-google-map-container {
+		height: 400px;
+	}
 }
 
 .detail-row {
