--- a/modules/publicComments/client/views/comments-EAO.html
+++ b/modules/publicComments/client/views/comments-EAO.html
@@ -1,7 +1,9 @@
 <div class="public-comment-period-view">
     
+    <div class="breadcrumbs">{{project.name}} &nbsp;&rsaquo;&nbsp; Public Comment Periods</div>
+    
     <div class="view-title-container">
-        <h1>{{project.name}} &nbsp;&rsaquo;&nbsp; Public Comment Periods</h1>
+        <h1>Public Comment Periods</h1>
     </div>
     
     <div class="view-body-container">
@@ -110,9 +112,35 @@
                     <div class="alert alert-danger hidden">
                         Review period for this comment expires in <strong>1 Days</strong>
                     </div>
-                    <div class="alert alert-info">
+                    <div class="alert alert-info hidden">
                         Review period for this comment expires in <strong>7 Days</strong>
                     </div>
+                    
+                    <!-- DEFER NOTES -->
+                    <div class="alert alert-info eao-comment-notes hidden">
+                        <div class="detail-row">
+                            <label>Deferred by:</label><span class="value">User Name</span>
+                        </div>
+                        <div class="notes detail-row">
+                            <span class="value wrap-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</span>
+                        </div>
+                        <div class="date">MM/DD/YYYY</div>
+                    </div>
+                    
+                    <!-- REJECTION NOTES -->
+                    <div class="alert alert-danger eao-comment-notes">
+                        <div class="detail-row">
+                            <label>Rejected by:</label><span class="value">User Name</span>
+                        </div>
+                        <div class="detail-row">
+                            <label>Reason for Rejection:</label><span class="value">Rejection Reason Here</span>
+                        </div>
+                        <div class="notes detail-row">
+                            <span class="value wrap-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</span>
+                        </div>
+                        <div class="date">MM/DD/YYYY</div>
+                    </div>
+                    
                 </div>
                 
                 <section class="comment-info">
@@ -221,11 +249,27 @@
                     </div> 
                 </section><!-- / ATTACHMENTS -->
                 
+                <section>
+                    <div class="detail-row">
+                        <label>Set Comment Status</label>
+                        <div class="btn-group comment-status-btns" data-toggle="buttons">
+                            <label class="btn btn-default active">
+                                <input type="radio" name="commentStatus" id="deferComment" autocomplete="off" checked> Defer
+                            </label>
+                            <label class="btn btn-danger">
+                                <input type="radio" name="commentStatus" id="rejectComment" autocomplete="off"> Reject
+                            </label>
+                            <label class="btn btn-success">
+                                <input type="radio" name="commentStatus" id="publishComment" autocomplete="off"> Publish
+                            </label>
+                        </div>
+                    </div>
+                </section>
+                
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="close">Reject</button>
-                <button type="button" class="btn btn-default" data-dismiss="close">Defer</button>
-                <button type="button" class="btn btn-success" data-dismiss="close" disabled="disabled">Publish</button>
+                <button type="button" class="btn btn-default" data-dismiss="close">Cancel</button>
+                <button type="button" class="btn btn-success" data-dismiss="close" disabled="disabled">Update</button>
 			</div>
 		</div>
 	</div>
