--- a/modules/publicComments/client/views/modal-review-comment-EAO.html
+++ b/modules/publicComments/client/views/modal-review-comment-EAO.html
@@ -18,7 +18,32 @@
                     <div class="alert alert-info">
                         Review period for this comment expires in <strong>7 Days</strong>
                     </div>
-                </div>
+                </div><!-- / STATUS ALERTS -->
+                
+                <!-- DEFER NOTES -->
+                <div class="alert alert-info eao-comment-notes hidden">
+                    <div class="detail-row">
+                        <label>Deferred by:</label><span class="value">User Name</span>
+                    </div>
+                    <div class="notes detail-row">
+                        <span class="value wrap-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</span>
+                    </div>
+                    <div class="date">MM/DD/YYYY</div>
+                </div><!-- / DEFER NOTES -->
+                
+                <!-- REJECTION NOTES -->
+                <div class="alert alert-danger eao-comment-notes">
+                    <div class="detail-row">
+                        <label>Rejected by:</label><span class="value">User Name</span>
+                    </div>
+                    <div class="detail-row">
+                        <label>Reason for Rejection:</label><span class="value">Rejection Reason Here</span>
+                    </div>
+                    <div class="notes detail-row">
+                        <span class="value wrap-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</span>
+                    </div>
+                    <div class="date">MM/DD/YYYY</div>
+                </div><!-- / REJECTION NOTES -->
                 
                 <section class="comment-info">
                     <label>Posted March 21, 2016</label>
@@ -144,6 +169,24 @@
                         </ul>
                     </div><!-- EAO ONLY -->   
                 </section><!-- / ATTACHMENTS -->
+                
+                <!-- SET COMMENT STATUS -->
+                <section>
+                    <div class="detail-row">
+                        <label>Set Comment Status</label>
+                        <div class="btn-group comment-status-btns" data-toggle="buttons">
+                            <label class="btn btn-default active">
+                                <input type="radio" name="commentStatus" id="deferComment" autocomplete="off" checked> Defer
+                            </label>
+                            <label class="btn btn-danger">
+                                <input type="radio" name="commentStatus" id="rejectComment" autocomplete="off"> Reject
+                            </label>
+                            <label class="btn btn-success">
+                                <input type="radio" name="commentStatus" id="publishComment" autocomplete="off"> Publish
+                            </label>
+                        </div>
+                    </div>
+                </section><!-- / SET COMMENT STATUS -->
                 
             </div>
             <div class="modal-footer">
