Fixing a small issue with the documents UI
- Missed units on a selector

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -2447,7 +2447,7 @@ $file-browser-item-active: #2b5580;
 			padding-left: 7rem;
 			
 			.glyphicon {
-				left: 5;
+				left: 5rem;
 			}
 		}
 		
